cmake_minimum_required(VERSION 3.5)

add_executable(example1 example1.cpp)
target_link_libraries(example1 PRIVATE necopp)

add_executable(example2 example2.cpp)
target_link_libraries(example2 PRIVATE necopp)

add_executable(example3 example3.cpp)
target_link_libraries(example3 PRIVATE necopp)

add_executable(example4 example4.cpp)
target_link_libraries(example4 PRIVATE necopp)

add_executable(example5 example5.cpp)
target_link_libraries(example5 PRIVATE necopp)

add_executable(example6 example6.cpp)
target_link_libraries(example6 PRIVATE necopp)

add_executable(example7 example7.cpp)
target_link_libraries(example7 PRIVATE necopp)

add_executable(example8 example8.cpp)
target_link_libraries(example8 PRIVATE necopp)
